syntax = "proto3";

package pb;

option go_package = "./auth";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
}

// RegisterRequest is the request for the Register RPC.
message RegisterRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    int32 created_at = 5;
    int32 updated_at = 6;
}

message Token {
    string access_token = 1;
    string refresh_token = 2;
    int32 expired_access_token = 3;
    int32 expired_refresh_token = 4;
}

message RegisterResponse {
    int32 code = 1;
    string message = 2;
}

// LoginRequest is the request for the Login RPC.
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    int32 code = 1;
    string message = 2;
    Token result = 3;
}
